[package]
name = "image_colorpalette"
version = "0.1.3"
edition = "2021"
description = "A minimalistic library that can download images and open them and generat a color palette of all the colors within the image. It also can detect if the image is grayscale and what the grayscale threshold is."
license = "MIT"

[lib]
name = "image_colorpalette"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
reqwest = "0.11.10"
anyhow = "1.0.57"
